// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Summary /> should style trend icon red/green 1`] = `
<span
  class="text-tsm flex items-center font-bold text-green"
>
  <svg
    aria-label="Upwards trend"
    class="mr-1 h-4 w-4 fill-green"
    style="transform: none;"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
    />
  </svg>
  50.00%
</span>
`;

exports[`<Summary /> should style trend icon red/green 3`] = `
<span
  class="text-tsm flex items-center font-bold text-red"
>
  <svg
    aria-label="Downwards trend"
    class="mr-1 h-4 w-4 fill-red"
    style="transform: scaleY(-1);"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
    />
  </svg>
  50.00%
</span>
`;

exports[`<Summary /> should style trend icon red/green 4`] = `
<svg
  aria-label="Downwards trend"
  class="mr-1 h-4 w-4 fill-red"
  style="transform: scaleY(-1);"
  viewBox="0 0 24 24"
>
  <path
    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
  />
</svg>
`;

exports[`<Summary /> should style trend icon red/green 5`] = `
<span
  class="text-tsm flex items-center font-bold text-green"
>
  <svg
    aria-label="Upwards trend"
    class="mr-1 h-4 w-4 fill-green"
    style="transform: none;"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
    />
  </svg>
  50.00%
</span>
`;

exports[`<Summary /> should style trend icon red/green 6`] = `
<svg
  aria-label="Upwards trend"
  class="mr-1 h-4 w-4 fill-green"
  style="transform: none;"
  viewBox="0 0 24 24"
>
  <path
    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
  />
</svg>
`;
